feat(auth): added signing mechanism to Auth microservice
This mechanism is used internally for Auth service to flag verified requests
- added rsa key generation bash script
- added key paths to application.yaml
- added corresponding Beans to SecurityConfig
- added /.well-known controller and getPublicKey method for key distribution